--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -34,7 +34,17 @@ h1 {
 .facebook-button{
 	border-radius:3px;
 	border-color:#000;
-	height:20px;
-	width:20px;
-	background-color:#8a321a;
+	height:16px;
+	width:16px;
+	background-color:rgba(138,50,26,0.5);
+	display:inline-block;
+}
+.facebook-button span{
+	margin:0;
+	top:0;
+	left:0;
+	background-image:url(/images/3d-transparent-glass-icon-social-media-logos-facebook-logo-square.png);
+	display:inline-block;
+	width:100%;
+	height:100%;
 }
